@@ -172,6 +172,19 @@
     Notes: Adapted from <a href="http://www.jstor.org/discover/10.1086/341858?uid=3739960&uid=2&uid=4&uid=3739256&sid=47699013551757">Darden L (2002) <em>Strategies for Discovering Mechanisms: Schema Instantiation, Modular Subassembly, Forward/Backward Chaining.</em> Phil Sci 69(S3):S354¡©S365.</a>
   </dd>
 
+  <dt><a name="modal">adj. modal:</a></dt>
+  <dd>The case that a system has more than 1 mode.<br>
+ Notes: Modal logic is the (set of) logic(s) dealing with different modes of implication: necessary, possible, permitted, forbidden, always, never, etc.  A bimodal distribution is one with 2 peaks in its PDF.  To mesh with the typical conceptions of math and logic, where only a single form of implication is used, non-modal = unimodal.
+  </dd>
+  <dt><a name="modality">n. modality:</a></dt>
+  <dd>The extent to which a system is modal.<br>
+ Notes: This may be quantifiable.  E.g. water has 3 phases (modes): ice, liquid, and vapor. But, as with water, such a quantification might exhibit discretization problems at the boundaries, e.g. amorphous ice.  An analogous situation obtains when conflating mechanism and phenomenon, the extent to which a systems modality is estimated through induction (phenomenon → mechanism) or deduction (mechanism → phenomenon)
+  </dd>
+  <dt><a name="mode">n. mode:</a></dt>
+  <dd>A particular region of either a state or behavior space of a given system.<br>
+ Notes: Mode as a manner of doing things, as in "à la mode", means a collection of paths through a common region of state or behavior space.  The statistical mode means a common sample from the sample space.
+  </dd>
+
   <dt><a name="model">n. model:</a></dt> <dd>a physical, mathematical, or logical representation of a referent system, entity, phenomenon, or process such that a homomorphism can be defined between the representation and the referent.  The similarities exhibited by the homomorphism might include but are not limited to behavior or structure.</dd>
 
   <dt><a name="modeling formalism">n. modeling formalism:</a></dt> <dd>a formalism for expressing models.  Specifically, a modeling formalism is a set of symbols and rules that encourage the separation of the symbols from their referent and manipulation of those symbols independent from the referent, but where those symbols have definite unambiguous referents.
