@@ -1,3 +1,7 @@
+2019-01-03-16:01  gepr  <gepr@tempusdictum.com>
+
+	* glossary.html: Add mode, modal, and modality to glossary.
+
 2015-11-17  gepr  <gepr@tempusdictum.com>
 
 	* projects.html: Change glossary to link to Google Sites Wiki.
